src/main/webapp/resources/css/main.css
.node-with-margin {
    margin-left:30px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.node-break {
    word-wrap:break-word;
}

#commons-body {
    width:95%;
    margin: auto;
}

.grandnode-with-margin {
    margin-left:50px;
    padding-left: 2em;
    text-indent: -2em;

    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.fullscreen {
    height:100%;
    width:100%;
}

#search {
    margin-top:5px;
}

.inline {
    display:inline;
}

.font-size-16 {
    font-size:16px;
}

.font-size-20 {
    font-size:20px;
}

.commons-header {
    margin-bottom:0px;
}

.commons-subheader {
    margin-top:0px;
}

.modal-dialog {
    width: 80% !important;
}

.list-group-item {
    padding:1px 3px !important;
}

.margin-top-22 {
    margin-top: 22px !important;
}


.margin-top-30 {
    margin-top: 30px !important;
}

.sub-title-font {
    color: #0c2b65;
    font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
    font-weight: normal;
}

.title-font {
    color: #0c2b65;
    font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
    font-weight: normal;
}

.title-font:after {
    content: "";
    display: block;
    background-color: #0c2b65;
    height: 10px;
    height: 0.625rem;
    margin-top: 21px;
    margin-top: 1.3125rem;
}

.main-nav {
    background-color: #0c2b65;
    color: white;
    height: 100% !important;
    width: 100% !important;
}

.background-nav {
    background-color: #0c2b65;
}

.leaf {
    color:white !important;
    font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
    font-weight: normal;
}

.spacer {
    top: auto; left: auto; bottom: auto; right: auto; margin: 0px; display: block; position: relative; box-sizing: content-box; width: 100%; min-height: 80px; height: 80px;
}

.navbar-brand-mod {
    float: left !important;
    height: 80px !important;
    padding-top: 0px !important;
    padding-bottom: 0px !important;
    padding-left: 15px !important;
    padding-right: 15px !important;
    font-size: 18px !important;
    line-height: 20px !important;
}

.navbar-fixed-top {
    min-height: 80px !important;
}

.inline-block {
    display: inline-block;
}

a {
    color: #0c2b65 !important;
    text-decoration: none;
}

.modal-dialog{
    position: relative !important;
    display: table;
    overflow-y: auto;
    overflow-x: auto;
    width: auto !important;
    min-width: 300px;
}

.modal-content {
    border-left: 5px solid #0c2b65 !important;
    border-right: 5px solid #0c2b65 !important;
    border-top: 2px solid #0c2b65 !important;
    border-bottom: 5px solid #0c2b65 !important;
}
.popover {
    border: 10px solid rgba(9, 41, 64, 1) !important;
}

.popover-content {
    padding: 5px 5px !important;
}

#imagepreview {
    width:100%;
}

.btn-default {
    color: #333;
    background-color: #fff !important;
    border-color: #ccc !important;
}

.page-divider {display:none}

.publication-info {
    color: #666 !important;
    font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
    /*text-transform: uppercase;*/
}

.standard-font {
    font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
}

.underline {
    text-decoration: underline;

}

.list-group-item {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.list-group-item li {
    white-space: pre-wrap;
}
@media screen and (min-width: 767px) {
    .navbar-padding {
        padding-left: 100px !important;
    }

    .padding-top-30 {
        padding-top: 30px!important;
    }

    .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
        height: 80px;
        background-color: rgba(0,0,0,0.25) !important;
    }

    .padding-top-30:hover {
        height: 80px;
        background-color: rgba(0,0,0,0.25) !important;
    }
    .margin-top-13 {
        margin-top: 13px;
    }
}

@media screen and (max-width: 766px) {
    .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
        background-color: rgba(0,0,0,0.25) !important;
    }

    .navbar-form {
        padding-top: 0px !important;
        padding-right: 0px !important;
        padding-bottom: 0px !important;
        padding-left: 15px;

        margin-top: 0px !important;
        margin-right: 0px !important;
        margin-bottom: 0px !important;
         margin-left: 0px !important;
         border-top: 0px solid transparent !important;
         border-bottom: 0px solid transparent !important;
         -webkit-box-shadow: none !important;
         box-shadow: none !important;
    }
}

@media (min-width: 991px) and (max-width: 991px) {
    .navbar-collapse.collapse {
        display: none !important;
    }
    .navbar-collapse.collapse.in {
        display: block !important;
    }
    .navbar-header .collapse, .navbar-toggle {
        display:block !important;
    }
    .navbar-header {
        float:none;
    }
}

.bs-docs-footer {
    /*padding-top:40px;
    padding-bottom:40px;
    margin-top:100px;*/
    color:#777;
    /*text-align:center;*/
    /*border-top:3px solid #0c2b65;*/
    font-size:14px;
    margin-top:10px;
    /*padding-bottom:2px;
    padding-top:10px;*/
}

.footer-sep {
    margin-bottom:7px;
}

.snomed-message,.disclaimer {
    font-size:x-small;
    margin-top:5px;
}

.modal-software-item {
    margin-top:5px;
}

.software-header {
    padding:0px !important;
    padding-left:15px !important;
    padding-right:15px !important;
    background-color: #0c2b65 !important
}

.color-white {
    color:white;
}

#logo-img {
    margin-top:3px;
}

.bold {
    font-weight:600;
}

#software-location {
    text-decoration:underline;
}

#software-source-code {
    text-decoration: underline;
}

#software-modal {
    max-width:600px;
}

/*.push {
    height:50px;
}*/

/*#content {
    min-height: calc(100vh - 125px);
}*/

html {
    position: relative;
    min-height: 100%;
}

body {
    /* Margin bottom by footer height */
    margin-bottom: 45px !important;
}
.footer {
    margin-top:10px;
    position: fixed;
    left:0;
    right:0;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 60px;
    background-color: #0c2b65;
}

.footer-container-lg {
    margin-top: 20px;
    margin-left: 20px;
}

.footer-container-xs {
    margin-top: 10px;
}

